--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <div class="navbar">
         <div class="logo-container">
-          <img src="./images/userAsset/NavLogo.jpg" class="logo">
+          <img src="NavLogo.jpg" class="logo">
           <div class="logo-text">anesh Bramhane</div>
         </div>
 
